--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -52,7 +52,8 @@ jobs:
         fi
         exit 0
         set -e
-        
+      env:
+        ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
     - name: Delete Old Prerelease (if there are any)
       uses: dev-drprasad/delete-tag-and-release@v0.1.2
       if: ${{ env.OLD_PRE_TAG != 0 && steps.build_package.outputs.package != 0 }}
