2nd attempt at fixing issue #15

--- a/control
+++ b/control
@@ -3,7 +3,7 @@ Name: DownloadBar14
 Depends: mobilesubstrate
 Version: 1.0.0
 Architecture: iphoneos-arm
-Description: Show a progress bar for downloading apps instead!
-Maintainer: Lavie Gariv
+Description: Show a progress bar notification for app downloads!
+Maintainer: Lavie
 Author: shepgoba
 Section: Tweaks
