--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -5,7 +5,7 @@ on:
             - test-build
 env:
     DEVELOPER_DIR: /Applications/Xcode_11.7.app/Contents/Developer
-    SYSROOT = ~/theos/sdks/iPhoneOS13.5.sdk
+    SYSROOT: ~/theos/sdks/iPhoneOS13.5.sdk
 jobs:
     build:
         name: Build Tweak
