--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -5,7 +5,7 @@ on:
             - test-build
 env:
     DEVELOPER_DIR: /Applications/Xcode_11.7.app/Contents/Developer
-    SYSROOT: ~/theos/sdks/iPhoneOS13.5.sdk
+    SYSROOT: theos/sdks/iPhoneOS13.5.sdk
 jobs:
     build:
         name: Build Tweak
@@ -19,7 +19,7 @@ jobs:
               uses: actions/cache@v2
               with:
                   path: |
-                      ~/theos/
+                      theos/
                       /usr/local/Cellar/
                       /usr/local/opt/
                   key: ${{ runner.os }}-test1-${{ steps.get-date.outputs.date }}
@@ -54,7 +54,7 @@ jobs:
               if: steps.cache-dependencies.outputs.cache-hit != 'true'
               run: |
                   brew install make
-                  PATH="/usr/local/opt/make/libexec/gnubin:$PATH"
+                  echo PATH=\"$(brew --prefix make)/libexec/gnubin:\$PATH\" >> ~/.zprofile
 
             - name: Update Theos
               if: steps.cache-dependencies.outputs.cache-hit != 'true'
