--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -6,6 +6,7 @@ on:
 env:
     DEVELOPER_DIR: /Applications/Xcode_11.7.app/Contents/Developer
     SYSROOT: theos/sdks/iPhoneOS13.5.sdk
+    #PATH: /usr/local/Cellar/make/libexec/gnubin:$PATH
 jobs:
     build:
         name: Build Tweak
@@ -55,6 +56,7 @@ jobs:
               run: |
                   brew install make
                   echo PATH=\"$(brew --prefix make)/libexec/gnubin:\$PATH\" >> ~/.zprofile
+                  export PATH="/usr/local/Cellar/make/libexec/gnubin:$PATH"
 
             - name: Update Theos
               if: steps.cache-dependencies.outputs.cache-hit != 'true'
