--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -20,6 +20,7 @@ jobs:
               uses: actions/cache@v2
               with:
                   path: |
+                      ~/.zprofile
                       theos/
                       /usr/local/Cellar/
                       /usr/local/opt/
@@ -56,7 +57,6 @@ jobs:
               run: |
                   brew install make
                   echo PATH=\"$(brew --prefix make)/libexec/gnubin:\$PATH\" >> ~/.zprofile
-                  export PATH="/usr/local/Cellar/make/libexec/gnubin:$PATH"
 
             - name: Update Theos
               if: steps.cache-dependencies.outputs.cache-hit != 'true'
