--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -14,7 +14,7 @@ jobs:
         env:
             THEOS: theos
 
-        #steps:
+        steps:
         #    - name: Cache multiple paths
         #      id: cache-dependencies
         #      uses: actions/cache@v2
