modified icon, improved app icon reliability, adds SnowBoard compatibilty.
• Modified Prog icon from 300 ppi to 72 ppi, and added it to the control file. This is only temporary, as most repos will not need this line.

• Implemented fetchAppIcon class that gets the correct app icon in the following order:
1. If Snowboard is installed, it cycles through user-installed themes in the correct order.
2. if no compatible appicon was found, it looks for an app icon by using the iTunes API and grabbing it in a 160x160 png format.
3. if there's still no app icon, it will use the one cached in the system, if available.
Using this class also provides SnowBoard compatibility for the first time.

• Hopefully patched #31

--- a/control
+++ b/control
@@ -4,7 +4,7 @@ Depends: mobilesubstrate, firmware (>= 13.0)
 Version: 1.0.0
 Architecture: iphoneos-arm
 Description: Track and manage your downloads right from the lock screen.
-Maintainer: Lavie Gariv (@LGarivDev), RuntimeOverflow
-Author: Lavie Gariv (@LGarivDev)
-Icon: https://github.com/lgariv/Prog/raw/test-build/layout/Library/Application%20Support/ProgExtra.bundle/icon.png
+Maintainer: Lavie Gariv, RuntimeOverflow
+Author: Lavie Gariv
+Icon: file:///Library/Application Support/ProgExtra.bundle/icon.png
 Section: Tweaks
